--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     <div id="map" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0"></div>
     <script type="module">
-      import EchartsLayer from './src/index.ts'
+      import EchartsLayer from './dist/mapbox-gl-echarts-layer.es.js'
       mapboxgl.accessToken =
-        'pk.eyJ1IjoiaHVhbmdsaWkiLCJhIjoiY2ptbjJsZXRsMHBlNzNsbGIycTk3eWU0biJ9.Pj_8_ER8nD7UQSSeOg4JZA'
+        'pk.eyJ1IjoiaHVhbmdsaWkiLCJhIjoiY2wwM2E4a2drMDVrZjNrcGRucHIxOHo0cyJ9.0ecG5KGQE6R-SmhxvLvhHg'
       const map = new mapboxgl.Map({
         container: 'map',
         style: 'mapbox://styles/huanglii/ckqt08oxg1kcc18ub9vowurqd?optimize=true',
