--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>vite lib</title>
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 
-    <script src="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js"></script>
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css" rel="stylesheet" />
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <title>vite lib</title>
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 
-  <body>
-    <div id="map" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0"></div>
-    <script type="module">
-      import EchartsLayer from './dist/mapbox-gl-echarts-layer.es.js'
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js"></script>
+  <link href="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css" rel="stylesheet" />
+</head>
+
+<body>
+  <div id="map" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0"></div>
+  <script type="module">
+    import EchartsLayer from './src/index.ts'
       mapboxgl.accessToken =
         'pk.eyJ1IjoiaHVhbmdsaWkiLCJhIjoiY2wwM2E4a2drMDVrZjNrcGRucHIxOHo0cyJ9.0ecG5KGQE6R-SmhxvLvhHg'
       const map = new mapboxgl.Map({
@@ -105,5 +106,6 @@
         map.addLayer(layer)
       })
     </script>
-  </body>
+</body>
+
 </html>
