--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="map" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0"></div>
-  <script type="module" src="./examples/scatter.js"></script>
+  <script type="module" src="./examples/image.js"></script>
 </body>
 
 </html>
