--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>vite lib</title>
+  <title>mapbox-gl-layers</title>
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js"></script>
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css" rel="stylesheet" />
 </head>
 
 <body>
